--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -32,7 +32,7 @@
             <th>5 Star Rating</th>
           </tr>
         </thead>
-        <tbody *ngFor="let product of products">
+        <tbody *ngFor="let product of filteredProducts">
           <tr>
             <td>
               <img
@@ -44,10 +44,12 @@
               />
             </td>
             <td>{{ product.productName }}</td>
-            <td>{{ product.productCode | lowercase }}</td>
+            <td>
+              {{ product.productCode | lowercase | convertToSpaces: "-" }}
+            </td>
             <td>{{ product.releaseDate }}</td>
             <td>{{ product.price | currency: "USD":"symbol":"1.2-2" }}</td>
-            <td>{{ product.starRating }}</td>
+            <td><pm-star [rating]="product.starRating"></pm-star></td>
           </tr>
         </tbody>
       </table>
